--- a/Jay/Data_prep.ipynb
+++ b/Jay/Data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,17 @@
     "    P2Y1_ele = targettree['P2Y1_ele'].array(library='np')\n",
     "    P2Y2_ele = targettree['P2Y2_ele'].array(library='np')\n",
     "\n",
+    "    ### Establish list over which to iterate detectors\n",
+    "\n",
+    "    detector_arrays = [\n",
+    "    D0V_ele, D0Vp_ele, D0X_ele, D0Xp_ele, D0U_ele, D0Up_ele, H1L_ele, H1R_ele, H1B_ele, H1T_ele,\n",
+    "    D2V_ele, D2Vp_ele, D2Xp_ele, D2X_ele, D2U_ele, D2Up_ele, H2R_ele, H2L_ele, H2B_ele, H2T_ele,\n",
+    "    D3mVp_ele, D3mV_ele, D3mXp_ele, D3mX_ele, D3mUp_ele, D3mU_ele, D3pVp_ele, D3pV_ele, D3pXp_ele, \n",
+    "    D3pX_ele, D3pUp_ele, D3pU_ele, H3B_ele, H3T_ele,\n",
+    "    P1X1_ele, H4Y1L_ele, H4Y1R_ele, P1Y1_ele, H4Y2L_ele, H4Y2R_ele, H4T_ele, H4B_ele, P2Y1_ele, \n",
+    "    P2X1_ele, P2X2_ele\n",
+    "]\n",
+    "\n",
     "    pid = targettree['pid'].array(library='np')\n",
     "\n",
     "    print('Reading Done')\n",
@@ -93,119 +104,20 @@
     "        for track in range(number_of_tracks):\n",
     "            \n",
     "            if(pid[event][track] > 0):\n",
-    "                #station 1\n",
-    "                elemID_mup[event][1] = D0V_ele[event][track]\n",
-    "                elemID_mup[event][2] = D0Vp_ele[event][track]\n",
-    "                elemID_mup[event][3] = D0X_ele[event][track]\n",
-    "                elemID_mup[event][4] = D0Xp_ele[event][track]\n",
-    "                elemID_mup[event][5] = D0U_ele[event][track]\n",
-    "                elemID_mup[event][6] = D0Up_ele[event][track]\n",
-    "                elemID_mup[event][7] = H1L_ele[event][track]\n",
-    "                elemID_mup[event][8] = H1R_ele[event][track]\n",
-    "                elemID_mup[event][9] = H1B_ele[event][track]\n",
-    "                elemID_mup[event][10] = H1T_ele[event][track]\n",
+    "                for i, detector in enumerate(detector_arrays, start=1):  ### Enumerate over the detectors, SO MUCH CLEANER@!@!!\n",
+    "                    elemID_mup[event][i] = detector[event][track]\n",
     "\n",
-    "                #station 2 \n",
-    "                elemID_mup[event][11] = D2V_ele[event][track]\n",
-    "                elemID_mup[event][12] = D2Vp_ele[event][track]\n",
-    "                elemID_mup[event][13] = D2Xp_ele[event][track]\n",
-    "                elemID_mup[event][14] = D2X_ele[event][track]\n",
-    "                elemID_mup[event][15] = D2U_ele[event][track]\n",
-    "                elemID_mup[event][16] = D2Up_ele[event][track]\n",
-    "                elemID_mup[event][17] = H2R_ele[event][track]\n",
-    "                elemID_mup[event][18] = H2L_ele[event][track]\n",
-    "                elemID_mup[event][19] = H2B_ele[event][track]\n",
-    "                elemID_mup[event][20] = H2T_ele[event][track]\n",
-    "\n",
-    "                #Station 3\n",
-    "                elemID_mup[event][21] = D3mVp_ele[event][track]\n",
-    "                elemID_mup[event][22] = D3mV_ele[event][track]\n",
-    "                elemID_mup[event][23] = D3mXp_ele[event][track]\n",
-    "                elemID_mup[event][24] = D3mX_ele[event][track]\n",
-    "                elemID_mup[event][25] = D3mUp_ele[event][track]\n",
-    "                elemID_mup[event][26] = D3mU_ele[event][track]\n",
-    "                elemID_mup[event][27] = D3pVp_ele[event][track]\n",
-    "                elemID_mup[event][28] = D3pV_ele[event][track]\n",
-    "                elemID_mup[event][29] = D3pXp_ele[event][track]\n",
-    "                elemID_mup[event][30] = D3pX_ele[event][track]\n",
-    "                elemID_mup[event][31] = D3pUp_ele[event][track]\n",
-    "                elemID_mup[event][32] = D3pU_ele[event][track]\n",
-    "                elemID_mup[event][33] = H3B_ele[event][track]\n",
-    "                elemID_mup[event][34] = H3T_ele[event][track]\n",
-    "\n",
-    "                #proptube\n",
-    "                elemID_mup[event][35] = P1X1_ele[event][track]\n",
-    "                elemID_mup[event][36] = H4Y1L_ele[event][track]\n",
-    "                elemID_mup[event][37] = H4Y1R_ele[event][track]\n",
-    "                elemID_mup[event][38] = P1Y1_ele[event][track]\n",
-    "                elemID_mup[event][39] = H4Y2L_ele[event][track]\n",
-    "                elemID_mup[event][40] = H4Y2R_ele[event][track]\n",
-    "                elemID_mup[event][41] = H4T_ele[event][track]\n",
-    "                elemID_mup[event][42] = H4B_ele[event][track]\n",
-    "                elemID_mup[event][45] = P2Y1_ele[event][track]\n",
-    "                elemID_mup[event][46] = P2X1_ele[event][track]\n",
-    "                elemID_mup[event][46] = P2X2_ele[event][track]\n",
     "\n",
     "            if(pid[event][track] < 0):\n",
-    "                #station 1\n",
-    "                elemID_mum[event][1] = D0V_ele[event][track]\n",
-    "                elemID_mum[event][2] = D0Vp_ele[event][track]\n",
-    "                elemID_mum[event][3] = D0X_ele[event][track]\n",
-    "                elemID_mum[event][4] = D0Xp_ele[event][track]\n",
-    "                elemID_mum[event][5] = D0U_ele[event][track]\n",
-    "                elemID_mum[event][6] = D0Up_ele[event][track]\n",
-    "                elemID_mum[event][7] = H1L_ele[event][track]\n",
-    "                elemID_mum[event][8] = H1R_ele[event][track]\n",
-    "                elemID_mum[event][9] = H1B_ele[event][track]\n",
-    "                elemID_mum[event][10] = H1T_ele[event][track]\n",
-    "\n",
-    "                #station 2 \n",
-    "                elemID_mum[event][11] = D2V_ele[event][track]\n",
-    "                elemID_mum[event][12] = D2Vp_ele[event][track]\n",
-    "                elemID_mum[event][13] = D2Xp_ele[event][track]\n",
-    "                elemID_mum[event][14] = D2X_ele[event][track]\n",
-    "                elemID_mum[event][15] = D2U_ele[event][track]\n",
-    "                elemID_mum[event][16] = D2Up_ele[event][track]\n",
-    "                elemID_mum[event][17] = H2R_ele[event][track]\n",
-    "                elemID_mum[event][18] = H2L_ele[event][track]\n",
-    "                elemID_mum[event][19] = H2B_ele[event][track]\n",
-    "                elemID_mum[event][20] = H2T_ele[event][track]\n",
-    "\n",
-    "                #Station 3\n",
-    "                elemID_mum[event][21] = D3mVp_ele[event][track]\n",
-    "                elemID_mum[event][22] = D3mV_ele[event][track]\n",
-    "                elemID_mum[event][23] = D3mXp_ele[event][track]\n",
-    "                elemID_mum[event][24] = D3mX_ele[event][track]\n",
-    "                elemID_mum[event][25] = D3mUp_ele[event][track]\n",
-    "                elemID_mum[event][26] = D3mU_ele[event][track]\n",
-    "                elemID_mum[event][27] = D3pVp_ele[event][track]\n",
-    "                elemID_mum[event][28] = D3pV_ele[event][track]\n",
-    "                elemID_mum[event][29] = D3pXp_ele[event][track]\n",
-    "                elemID_mum[event][30] = D3pX_ele[event][track]\n",
-    "                elemID_mum[event][31] = D3pUp_ele[event][track]\n",
-    "                elemID_mum[event][32] = D3pU_ele[event][track]\n",
-    "                elemID_mum[event][33] = H3B_ele[event][track]\n",
-    "                elemID_mum[event][34] = H3T_ele[event][track]\n",
-    "\n",
-    "                #proptube\n",
-    "                elemID_mum[event][35] = P1X1_ele[event][track]\n",
-    "                elemID_mum[event][36] = H4Y1L_ele[event][track]\n",
-    "                elemID_mum[event][37] = H4Y1R_ele[event][track]\n",
-    "                elemID_mum[event][38] = P1Y1_ele[event][track]\n",
-    "                elemID_mum[event][39] = H4Y2L_ele[event][track]\n",
-    "                elemID_mum[event][40] = H4Y2R_ele[event][track]\n",
-    "                elemID_mum[event][41] = H4T_ele[event][track]\n",
-    "                elemID_mum[event][42] = H4B_ele[event][track]\n",
-    "                elemID_mum[event][45] = P2Y1_ele[event][track]\n",
-    "                elemID_mum[event][46] = P2X1_ele[event][track]\n",
-    "                elemID_mum[event][46] = P2X2_ele[event][track]\n",
+    "                for i, detector in enumerate(detector_arrays, start=1):\n",
+    "                    elemID_mum[event][i] = detector[event][track]\n",
     "\n",
     "    return elemID_mum, elemID_mup\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -219,28 +131,28 @@
     }
    ],
    "source": [
-    "root_file = \"rootfiles/DY_Target_100k_080124/merged_trackQA_v2.root\"\n",
+    "root_file = \"merged_trackQA_v2.root\"\n",
     "elemID_mum, elemID_mup = read_root_file(root_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([         0,         77,         77,         66,         66,\n",
-       "               96,         97, 2147483647,         16, 2147483647,\n",
-       "               11,         91,         91,         93,         93,\n",
-       "              112,        112, 2147483647,         16, 2147483647,\n",
-       "               15, 2147483647, 2147483647, 2147483647, 2147483647,\n",
-       "       2147483647, 2147483647, 2147483647, 2147483647, 2147483647,\n",
-       "       2147483647, 2147483647, 2147483647, 2147483647, 2147483647,\n",
-       "       2147483647, 2147483647, 2147483647,         60, 2147483647,\n",
-       "       2147483647, 2147483647, 2147483647,          0,          0,\n",
-       "       2147483647, 2147483647,          0,          0,          0,\n",
+       "array([         0,         78,         78,         67,         68,\n",
+       "               99,         99, 2147483647,         15, 2147483647,\n",
+       "               11,         66,         66,         64,         64,\n",
+       "               79,         79, 2147483647,         15, 2147483647,\n",
+       "               10, 2147483647, 2147483647, 2147483647, 2147483647,\n",
+       "       2147483647, 2147483647,         85,         86,         77,\n",
+       "               78,         87,         87, 2147483647,         11,\n",
+       "               46,         12, 2147483647,         52,         12,\n",
+       "       2147483647,         11, 2147483647,         53,         47,\n",
+       "               48,          0,          0,          0,          0,\n",
        "                0,          0,          0,          0,          0,\n",
        "                0,          0,          0,          0,          0,\n",
        "                0,          0,          0,          0,          0,\n",
@@ -333,18 +245,18 @@
        "                0,          0,          0,          0,          0])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "elemID_mum[0].astype(int)"
+    "elemID_mum[3].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
